[package]
name = "floatpack"
version = "0.1.0"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.3.0"
bitpacking = "0.8.2"
serde = { version = "1.0.104", features = ["derive"] }
