[package]
name = "floatpack"
version = "0.1.0"
authors = ["xermicus <bigcyrill@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.17.0"
bitpacking = "0.8.4"

[dev-dependencies]
rust_decimal_macros = "1.17"
rand = "0.8.4"